# Sentinel-IDE

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.txt  appcast.xml
_bmad-output/planning-artifacts/briefs/brief-SentinelIDE-2026-06-27/: .memlog.md  addendum.md  brief.md
_bmad-output/planning-artifacts/prds/prd-SentinelIDE-2026-06-27/: .memlog.md  addendum.md  prd.md  reconcile-brief.md  research-ide-landscape.md  review-adversarial-general.md  review-adversarial-signing.md  review-rubric-signing.md  review-rubric.md
_bmad-output/planning-artifacts/ux-designs/ux-SentinelIDE-2026-06-27/: .memlog.md  DESIGN.md  EXPERIENCE.md
_bmad-output/planning-artifacts/ux-designs/ux-SentinelIDE-2026-06-27/mockups/: key-secret-leak-editor.html  key-signing.html  key-toolchain-readiness.html
docs/: HANDOVER.md  RELEASING.md  Sentinel-lang_request.md  prototype.md  sentinel-project.md
examples/: crypto.sentinel  crypto.sentinel.sig  hello.sentinel  sentinel-trust.toml  sentinel.toml
packaging/: Sentinel-IDE.iss  SentinelIDE.rc  app.manifest
scripts/: build.bat  capture.ps1  convert-icon.ps1  launch.ps1  loc.ps1  make-appcast.ps1  make-installer.bat  sign-release.ps1
src/: WinMain.cpp
src/core/: FileAssoc.h  Logger.h  Proc.h  Project.h  Seal.h  Settings.h  Signing.h  Toolchain.h
src/host/win32/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  PasswordDialog.cpp  ProjectSettingsDialog.cpp  ProjectSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h  SigningDialog.cpp  SigningDialog.h  Updater.cpp  Updater.h  WinMain.cpp
src/ui/: AboutDialog.cpp  MainWindow.cpp  MainWindow.h  PasswordDialog.cpp  PasswordDialog.h  ProjectSettingsDialog.cpp  SettingsDialog.cpp  SigningDialog.cpp  SigningDialog.h  Theme.h
tests/: seal_test.cpp
tools/: loc.sentinel
